Revise README for Submarine Sonar Simulator
Updated the README to reflect project changes and features.